[Feat/#37]: json 응답 필드 수정 (#39)
* feat: 응답 dto 에서 배출 가능 요일 List 로 수정

* feat: remark, tabTitle 을 dto 에 반영

* feat: 유의사항 필드 remark를 List<String>으로 변환, 문자열 파싱 메서드 구현

* feat: 예시 쓰레기 사진과 이름만 있는 응답 dto 생성

* feat: 페트병만을 위한 service, repository, dto 생성

* feat: controller 에서 쓰레기가 페트병인지 아닌지에 따라 다른 dto를 반환하도록 구현

* feat: 응답 dto에 재활용 가능 여부 추가